--- a/.github/workflows/rust6.yml
+++ b/.github/workflows/rust6.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: ooo.exe
-        path: target\release\ooo.exe
+        path: target/release/ooo.exe
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
