--- a/.github/workflows/rust6.yml
+++ b/.github/workflows/rust6.yml
@@ -26,5 +26,4 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         tag_name: 'nightly'
-        files: |
-          exe
+        files: ooo.exe
